--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,15 @@ jobs:
       image: zmkfirmware/zmk-build-arm:stable
     permissions:
       contents: read
-
+      
     steps:
       - name: ⬇️ Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: 🚀 Setup ZMK Workspace and Build
+          
+      - name: 🚀 West Setup, Build, Devicetree Validation
+        id: build_run
         shell: bash
         run: |
           set -euo pipefail
@@ -32,57 +33,76 @@ jobs:
           ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
           CUSTOM_CONFIG_DIR="$GITHUB_WORKSPACE/config"
           BOARD_NAME="nice_nano_v2"
+          OVERLAY_PATH="$ZMK_ROOT/app/$BOARD_NAME.overlay"
           DTS_PATH="$ZMK_ROOT/build/zephyr/zephyr.dts"
+          DTS_PRE_PATH="$ZMK_ROOT/build/zephyr/zephyr.dts.pre"
 
-          echo "--- Cloning ZMK ---"
+          # --- 1. Initialize and Update West Workspace ---
           git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR"
-
-          echo "--- Initializing west workspace ---"
           mkdir -p "$ZMK_ROOT"
           west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT"
           cd "$ZMK_ROOT"
           west update
-
-          echo "--- Copying full app folder ---"
           mkdir -p "$ZMK_ROOT/app"
           cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app"
-
-          echo "--- Copying overlay and keymap ---"
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$ZMK_ROOT/app/$BOARD_NAME.overlay"
           cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap" "$ZMK_ROOT/app/$BOARD_NAME.keymap"
+          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$ZMK_ROOT/app/$BOARD_NAME.overlay"
 
-          echo "--- Sourcing Zephyr Environment ---"
+          # --- 2. Source Zephyr Environment ---
+          echo "--- 2. Sourcing Zephyr Environment Variables ---"
           . "$ZMK_ROOT/zephyr/zephyr-env.sh"
 
-          echo "--- Validating Devicetree ---"
-          DTC_CMD="/opt/zephyr-sdk-0.16.9/sysroots/x86_64-pokysdk-linux/usr/bin/dtc"
-          if [ ! -x "$DTC_CMD" ]; then
-              echo "❌ dtc not found at $DTC_CMD, skipping devicetree validation"
-          else
-              "$DTC_CMD" -I dts -O dtb -o /dev/null "$ZMK_ROOT/app/$BOARD_NAME.overlay" || echo "❌ Overlay devicetree compilation failed"
-              echo "✅ Overlay syntax validated"
-          fi
+          # --- 3. Dump Overlay Contents ---
+          echo "--- 3. DUMPING $BOARD_NAME.overlay CONTENTS ---"
+          cat -n "$OVERLAY_PATH"
+          echo "----------------------------------------------------------------------"
 
-          echo "--- Starting west build ---"
+          # --- 4. Devicetree Validation (Zephyr dtc) ---
+          echo "--- 4. VALIDATING DEVICETREE ---"
+          DTC_BIN="$ZMK_ROOT/zephyr/scripts/dtc/dtc"
+
+          if [ ! -x "$DTC_BIN" ]; then
+              echo "❌ dtc binary not found at $DTC_BIN"
+          else
+              mkdir -p "$(dirname "$DTS_PRE_PATH")"
+              if "$DTC_BIN" -I dts -O dtb -o /dev/null "$OVERLAY_PATH"; then
+                  echo "✅ Overlay compiled successfully with Zephyr dtc."
+              else
+                  echo "❌ Overlay failed devicetree compilation with Zephyr dtc."
+              fi
+
+              # Preprocessor dump for debugging
+              "$DTC_BIN" -I dts -O dts -o "$DTS_PRE_PATH" "$OVERLAY_PATH" || echo "(preprocessor dump failed)"
+          fi
+          echo "----------------------------------------------------------------------"
+
+          # --- 5. Start Final West Build ---
+          echo "--- 5. Starting Final West Build ---"
           set +e
           west build -b $BOARD_NAME "$ZMK_ROOT/app"
           BUILD_STATUS=$?
           set -e
-
+          
           echo "BUILD_STATUS=$BUILD_STATUS" >> $GITHUB_OUTPUT
 
+          # --- 6. Dump zephyr.dts for Debugging (If Build Fails) ---
           if [ $BUILD_STATUS -ne 0 ]; then
-              echo "❌ WEST BUILD FAILED. Dumping zephyr.dts..."
-              if [ -f "$DTS_PATH" ]; then
-                  cat -n "$DTS_PATH"
-              else
-                  echo "zephyr.dts not found — build failed before DTS generation"
-              fi
+             echo "----------------------------------------------------------------------"
+             echo "❌ WEST BUILD FAILED. Dumping zephyr.dts for debugging..."
+             if [ -f "$DTS_PATH" ]; then
+                 echo "--- BEGIN zephyr.dts ---"
+                 cat -n "$DTS_PATH" || echo "(cat failed — file unreadable)"
+                 echo "--- END zephyr.dts ---"
+             else
+                 echo "zephyr.dts not found — build likely failed before DTS generation."
+             fi
+             echo "----------------------------------------------------------------------"
           fi
 
           exit $BUILD_STATUS
 
-      - name: 💾 Upload Devicetree Preprocessor Logs (On Failure)
+      # 💾 Upload Devicetree Preprocessor Logs (On Failure)
+      - name: 💾 Upload Devicetree Preprocessor Logs
         uses: actions/upload-artifact@v4
         if: ${{ steps.build_run.outputs.BUILD_STATUS != '0' }}
         with:
@@ -90,6 +110,7 @@ jobs:
           path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zephyr.dts.pre
           retention-days: 1
 
+      # ⬆️ Upload Final Artifacts (If Build Succeeds)
       - name: ⬆️ Upload Final Artifacts
         uses: actions/upload-artifact@v4
         if: ${{ steps.build_run.outputs.BUILD_STATUS == '0' }}
