--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: 🚀 West Setup, Build, Devicetree Validation
+      - name: 🚀 Setup, Copy Configs, Validate DT, and Build
         id: build_run
         shell: bash
         run: |
@@ -34,86 +34,67 @@ jobs:
           CUSTOM_CONFIG_DIR="$GITHUB_WORKSPACE/config"
           BOARD_NAME="nice_nano_v2"
           OVERLAY_PATH="$ZMK_ROOT/app/$BOARD_NAME.overlay"
+          KEYMAP_PATH="$ZMK_ROOT/app/$BOARD_NAME.keymap"
           DTS_PATH="$ZMK_ROOT/build/zephyr/zephyr.dts"
-          DTS_PRE_PATH="$ZMK_ROOT/build/zephyr/zephyr.dts.pre"
 
-          # --- 1. Initialize and Update West Workspace ---
+          echo "--- 1. Initialize West Workspace ---"
           git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR"
           mkdir -p "$ZMK_ROOT"
           west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT"
           cd "$ZMK_ROOT"
           west update
           mkdir -p "$ZMK_ROOT/app"
-          cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app"
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap" "$ZMK_ROOT/app/$BOARD_NAME.keymap"
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$ZMK_ROOT/app/$BOARD_NAME.overlay"
 
-          # --- 2. Source Zephyr Environment ---
-          echo "--- 2. Sourcing Zephyr Environment Variables ---"
+          echo "--- 2. Copy Overlay and Keymap from Config ---"
+          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$OVERLAY_PATH"
+          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap" "$KEYMAP_PATH"
+
+          echo "--- 3. Source Zephyr Environment ---"
           . "$ZMK_ROOT/zephyr/zephyr-env.sh"
 
-          # --- 3. Dump Overlay Contents ---
-          echo "--- 3. DUMPING $BOARD_NAME.overlay CONTENTS ---"
+          echo "--- 4. Dump Overlay Contents ---"
           cat -n "$OVERLAY_PATH"
           echo "----------------------------------------------------------------------"
 
-          # --- 4. Devicetree Validation (Zephyr dtc) ---
-          echo "--- 4. VALIDATING DEVICETREE ---"
-          DTC_BIN="$ZMK_ROOT/zephyr/scripts/dtc/dtc"
-
-          if [ ! -x "$DTC_BIN" ]; then
-              echo "❌ dtc binary not found at $DTC_BIN"
+          echo "--- 5. Validate Devicetree ---"
+          if command -v dtc >/dev/null 2>&1; then
+            dtc -I dts -O dtb -o /tmp/dtb.dtb "$OVERLAY_PATH" || echo "⚠️ Overlay DT compilation warning/failure"
           else
-              mkdir -p "$(dirname "$DTS_PRE_PATH")"
-              if "$DTC_BIN" -I dts -O dtb -o /dev/null "$OVERLAY_PATH"; then
-                  echo "✅ Overlay compiled successfully with Zephyr dtc."
-              else
-                  echo "❌ Overlay failed devicetree compilation with Zephyr dtc."
-              fi
-
-              # Preprocessor dump for debugging
-              "$DTC_BIN" -I dts -O dts -o "$DTS_PRE_PATH" "$OVERLAY_PATH" || echo "(preprocessor dump failed)"
+            echo "❌ dtc not found; skipping devicetree validation"
           fi
-          echo "----------------------------------------------------------------------"
 
-          # --- 5. Start Final West Build ---
-          echo "--- 5. Starting Final West Build ---"
-          set +e
-          west build -b $BOARD_NAME "$ZMK_ROOT/app"
-          BUILD_STATUS=$?
-          set -e
-          
+          echo "--- 6. Build ZMK Firmware ---"
+          BUILD_STATUS=0
+          if ! west build -b "$BOARD_NAME" "$ZMK_ROOT/app"; then
+            BUILD_STATUS=1
+          fi
+
           echo "BUILD_STATUS=$BUILD_STATUS" >> $GITHUB_OUTPUT
 
-          # --- 6. Dump zephyr.dts for Debugging (If Build Fails) ---
           if [ $BUILD_STATUS -ne 0 ]; then
-             echo "----------------------------------------------------------------------"
-             echo "❌ WEST BUILD FAILED. Dumping zephyr.dts for debugging..."
-             if [ -f "$DTS_PATH" ]; then
-                 echo "--- BEGIN zephyr.dts ---"
-                 cat -n "$DTS_PATH" || echo "(cat failed — file unreadable)"
-                 echo "--- END zephyr.dts ---"
-             else
-                 echo "zephyr.dts not found — build likely failed before DTS generation."
-             fi
-             echo "----------------------------------------------------------------------"
+            echo "----------------------------------------------------------------------"
+            echo "❌ WEST BUILD FAILED. Dumping zephyr.dts for debugging..."
+            if [ -f "$DTS_PATH" ]; then
+              cat -n "$DTS_PATH"
+            else
+              echo "zephyr.dts not found — build likely failed before DTS generation."
+            fi
+            echo "----------------------------------------------------------------------"
           fi
 
           exit $BUILD_STATUS
 
-      # 💾 Upload Devicetree Preprocessor Logs (On Failure)
-      - name: 💾 Upload Devicetree Preprocessor Logs
-        uses: actions/upload-artifact@v4
+      - name: 💾 Upload Devicetree Preprocessor Logs (On Failure)
         if: ${{ steps.build_run.outputs.BUILD_STATUS != '0' }}
+        uses: actions/upload-artifact@v4
         with:
           name: devicetree-debug-logs
           path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zephyr.dts.pre
           retention-days: 1
 
-      # ⬆️ Upload Final Artifacts (If Build Succeeds)
-      - name: ⬆️ Upload Final Artifacts
-        uses: actions/upload-artifact@v4
+      - name: ⬆️ Upload Final Artifacts (On Success)
         if: ${{ steps.build_run.outputs.BUILD_STATUS == '0' }}
+        uses: actions/upload-artifact@v4
         with:
           name: zmk-firmware
           path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zmk.uf2
