--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,19 +14,22 @@ jobs:
       image: zmkfirmware/zmk-build-arm:stable
     permissions:
       contents: read
-      
+
     steps:
       - name: ⬇️ Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
-      - name: 🚀 Setup, Copy Configs, Validate DT, and Build
-        id: build_run
+
+      - name: 🛠 Install Device Tree Compiler
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y device-tree-compiler
+
+      - name: 🚀 West Setup, Copy App, Overlay, and Keymap
+        id: setup
         shell: bash
         run: |
-          set -euo pipefail
-
           # --- Configuration Variables ---
           ZMK_REVISION="v0.3"
           ZMK_CLONE_DIR="$GITHUB_WORKSPACE/app_clone"
@@ -37,64 +40,54 @@ jobs:
           KEYMAP_PATH="$ZMK_ROOT/app/$BOARD_NAME.keymap"
           DTS_PATH="$ZMK_ROOT/build/zephyr/zephyr.dts"
 
-          echo "--- 1. Initialize West Workspace ---"
-          git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR"
+          # --- 1. Clone and Initialize ZMK Workspace ---
+          git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR" || exit 1
           mkdir -p "$ZMK_ROOT"
-          west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT"
-          cd "$ZMK_ROOT"
-          west update
+          west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" || exit 1
+          cd "$ZMK_ROOT" || exit 1
+          west update || exit 1
+
+          # --- 2. Copy Full App Folder and Overlay/Keymap ---
           mkdir -p "$ZMK_ROOT/app"
+          cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app" || exit 1
+          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$OVERLAY_PATH" || exit 1
+          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap" "$KEYMAP_PATH" || exit 1
 
-          echo "--- 2. Copy Overlay and Keymap from Config ---"
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$OVERLAY_PATH"
-          cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap" "$KEYMAP_PATH"
+          # --- 3. Source Zephyr Environment ---
+          echo "--- 3. Sourcing Zephyr Environment Variables ---"
+          . "$ZMK_ROOT/zephyr/zephyr-env.sh" || { echo "FATAL: zephyr-env.sh sourcing failed."; exit 1; }
 
-          echo "--- 3. Source Zephyr Environment ---"
-          . "$ZMK_ROOT/zephyr/zephyr-env.sh"
-
-          echo "--- 4. Dump Overlay Contents ---"
+          # --- 4. Dump Overlay Contents ---
+          echo "--- 4. DUMPING $BOARD_NAME.overlay CONTENTS ---"
           cat -n "$OVERLAY_PATH"
           echo "----------------------------------------------------------------------"
 
-          echo "--- 5. Validate Devicetree ---"
-          if command -v dtc >/dev/null 2>&1; then
-            dtc -I dts -O dtb -o /tmp/dtb.dtb "$OVERLAY_PATH" || echo "⚠️ Overlay DT compilation warning/failure"
-          else
-            echo "❌ dtc not found; skipping devicetree validation"
-          fi
+          # --- 5. Validate Devicetree ---
+          echo "--- 5. VALIDATING DEVICETREE ---"
+          dtc -I dts -O dtb -o /tmp/validate.dtb "$OVERLAY_PATH" && echo "✅ Devicetree validated successfully." || echo "❌ Devicetree validation failed."
 
-          echo "--- 6. Build ZMK Firmware ---"
-          BUILD_STATUS=0
-          if ! west build -b "$BOARD_NAME" "$ZMK_ROOT/app"; then
-            BUILD_STATUS=1
-          fi
-
+      - name: 🏗 Build ZMK Firmware
+        id: build_run
+        shell: bash
+        run: |
+          BOARD_NAME="nice_nano_v2"
+          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
+          west build -b $BOARD_NAME "$ZMK_ROOT/app"
+          BUILD_STATUS=$?
           echo "BUILD_STATUS=$BUILD_STATUS" >> $GITHUB_OUTPUT
-
-          if [ $BUILD_STATUS -ne 0 ]; then
-            echo "----------------------------------------------------------------------"
-            echo "❌ WEST BUILD FAILED. Dumping zephyr.dts for debugging..."
-            if [ -f "$DTS_PATH" ]; then
-              cat -n "$DTS_PATH"
-            else
-              echo "zephyr.dts not found — build likely failed before DTS generation."
-            fi
-            echo "----------------------------------------------------------------------"
-          fi
-
           exit $BUILD_STATUS
 
-      - name: 💾 Upload Devicetree Preprocessor Logs (On Failure)
-        if: ${{ steps.build_run.outputs.BUILD_STATUS != '0' }}
+      - name: 💾 Upload Devicetree Debug Logs (On Failure)
         uses: actions/upload-artifact@v4
+        if: ${{ steps.build_run.outputs.BUILD_STATUS != '0' }}
         with:
           name: devicetree-debug-logs
           path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zephyr.dts.pre
           retention-days: 1
 
-      - name: ⬆️ Upload Final Artifacts (On Success)
-        if: ${{ steps.build_run.outputs.BUILD_STATUS == '0' }}
+      - name: ⬆️ Upload Final Firmware Artifact (On Success)
         uses: actions/upload-artifact@v4
+        if: ${{ steps.build_run.outputs.BUILD_STATUS == '0' }}
         with:
           name: zmk-firmware
           path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zmk.uf2
